added test cases and signal definitions
